inventory_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  selector:
    matchLabels:
      app: inventory

  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: sanixsandel/inventory:1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
         - containerPort: 5001


---
apiVersion: v1
kind: Service
metadata:
 name: inventory-service
spec:
  type: NodePort
  selector:
    app: inventory
  ports:
  - port: 9002
    targetPort: 5001
    nodePort: 30003
