istio_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shopper-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopper
spec:
  hosts:
  - "*"
  gateways:
  - shopper-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: shopper-service
        port:
          number: 9000
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - "192.168.49.2"
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: inventory-service
        port:
          number: 9002


---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grocery
spec:
  hosts:
  - "192.168.49.2"
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: grocery-service
        port:
          number: 9001
